test since date

--- a/.github/workflows/omnivook.yml
+++ b/.github/workflows/omnivook.yml
@@ -50,7 +50,7 @@ jobs:
         if [ ${{ inputs.archive }} ]; then
           ARCHIVE_FLAG="--archive"
         fi
-
+        echo "SINCE DATE: $SINCE_DATE"
         python omnivook.py --since $SINCE_DATE $ARCHIVE_FLAG
 
     - name: Set up EPUB file name
