--- a/.github/workflows/omnivook.yml
+++ b/.github/workflows/omnivook.yml
@@ -106,6 +106,8 @@ jobs:
         attachments: "*.epub"
 
     - name: No eBook send
+      env:
+        OUTPUT_LAST_LINE: ${{steps.run_omnivook.outputs.last_line}}
       if: ${{ contains(steps.run_omnivook.outputs.last_line, 'ERROR') }}
       run: |
         echo "No saved today or an Error ocurred: $OUTPUT_LAST_LINE"
